--- a/app/src/main/res/layout/activity_signup_screen.xml
+++ b/app/src/main/res/layout/activity_signup_screen.xml
@@ -88,6 +88,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Email"
                 android:singleLine="true"
+                android:inputType="textEmailAddress"
                 android:textColorHint="@color/hintColor"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -103,6 +104,7 @@
                 app:drawableTint="@color/black"
                 android:drawablePadding="8dp"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:textColorHint="@color/hintColor"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -119,6 +121,7 @@
                 android:hint="Confirm Password"
                 android:textColorHint="@color/hintColor"
                 android:padding="8dp"
+                android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginTop="20dp"/>
