--- a/app/src/main/res/layout/activity_seat_selection.xml
+++ b/app/src/main/res/layout/activity_seat_selection.xml
@@ -58,6 +58,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/depature_location_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kuruengala"
@@ -76,6 +77,7 @@
                 />
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/arrival_location_id"
                 android:layout_height="wrap_content"
                 android:text="Kandy"
                 android:textSize="15dp"
@@ -669,10 +671,18 @@
                         android:text="Confirm"
                         />
                 </LinearLayout>
-
+                <TextView
+                    android:id="@+id/textId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Test text"
+                    android:textColor="@color/black"
+                    />
 
             </LinearLayout>
+
         </ScrollView>
+
 
 
     </LinearLayout>
